@@ -1,3 +1,8 @@
+2008-05-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/transform.R: Ensure that all mappings preserve multiline
+	structures.
+
 2008-05-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/filter.R: Every filter has now an attribute indicating whether
